# CertificationManager

./: .gitignore  CONTRIBUTING.md  GUIDE.md  IMPROVEMENTS.md  LICENSE  Makefile  QUICKSTART.md  README.md  ROADMAP.md  TODO.md  generate_test_certificates.py  pyproject.toml  requirements-dev.txt  requirements.txt  restart_web.sh  setup.py  start_web.sh  test_api.py
docs/: API.md  DEVELOPMENT.md  README.md
src/: __init__.py
src/cli/: __init__.py  commands.py  web_command.py
src/core/: __init__.py  alerts.py  ca_manager.py  certificate.py  import_export.py  key.py  letsencrypt.py  lifecycle.py  renewal.py  storage.py
src/core/certificate/: __init__.py  client.py
src/core/validation/: __init__.py  certificate.py  domain.py
src/utils/: __init__.py
src/web/: __init__.py  app.py
src/web/static/css/: style.css
src/web/static/js/: app.js
src/web/templates/: index.html
tests/: __init__.py
tests/unit/: __init__.py  test_certificate.py  test_key.py  test_validation.py
